--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>C.H.Kao's Portfolio</title>
+    <base href="/portfolio-index/">
   </head>
   <body>
     <div id="root"></div>
