--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0; URL='https://alphacamp.github.io/portfolio-index'">
+  <meta http-equiv="refresh" content="0; URL='https://c2838.github.io/portfolio-index'">
   <title>portfolio 404 redirect</title>
 </head>
 <body>
